# pricepulse

./: .gitignore  INTEGRATIONS.md  INTEROP.md  README.md  pyproject.toml
demos/01-basic/: SCENARIO.md  competitor-new.html  competitor-old.html  run.sh
examples/: help.txt  version.txt
integrations/: README.md  webhook.py
pricepulse/: __init__.py  cli.py  connect.py  core.py  mcp_server.py
tests/: test_connect.py  test_deep.py  test_smoke.py
