[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-pricepulse"
version = "0.1.0"
description = "Competitor pricing/feature-change monitor with diff alerts"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["business", "cognis-digital", "cognis-neural-suite", "pricing", "competitive-intelligence", "monitoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/pricepulse"

[project.scripts]
pricepulse = "pricepulse.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pricepulse"]
